closing issues from github

--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -3,10 +3,9 @@
       <!-- partial:partials/_navbar.html -->
       <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-top justify-content-center">
-          <a class="navbar-brand brand-logo" href="index.html">
-            Card System </a>
-          <a class="navbar-brand brand-logo-mini" href="index.html">
-            Card System </a>
+          <a class="navbar-brand brand-logo" href="#">
+            <img src="assets/images/logo.png" height="80">
+          </a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-center">
           <ul class="navbar-nav ml-auto">
@@ -144,6 +143,13 @@
                           <h4 class="card-title mb-0">Users</h4>
                         </div>
                         <p>Registered Users</p>
+
+                        <div class="row">
+                          <button class="btn btn-secondary" (click)="exporter.exportTable('csv')">Csv</button> &nbsp;
+                          <button class="btn btn-secondary" (click)="exporter.exportTable('json')">Json</button> &nbsp;
+                          <button class="btn btn-secondary" (click)="exporter.exportTable('txt')">Txt</button>
+                        </div>
+
                         <div class="example-header">
                           <mat-form-field>
                             <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
@@ -152,7 +158,7 @@
 
                         <div class="example-container mat-elevation-z8">
 
-                          <mat-table [dataSource]="dataSource" matSort>
+                          <mat-table matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" matSort>
 
                             <!-- Name Column -->
                             <ng-container matColumnDef="Name">
@@ -172,10 +178,10 @@
                               <mat-cell *matCellDef="let row"> {{row.email}} </mat-cell>
                             </ng-container>
 
-                            <!-- Name Column -->
-                            <ng-container matColumnDef="Updated On">
-                              <mat-header-cell *matHeaderCellDef mat-sort-header> Updated On </mat-header-cell>
-                              <mat-cell *matCellDef="let row"> {{row.updatedAt | date}} </mat-cell>
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="Phone No">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Phone No </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.phone_no}} </mat-cell>
                             </ng-container>
 
                             <!-- Color Column -->
@@ -191,10 +197,22 @@
                             </ng-container>
 
                             <!-- Color Column -->
+                            <ng-container matColumnDef="Branch">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Branch </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.branch}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Color Column -->
                             <ng-container matColumnDef="Zone">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Zone 
                               </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.zone}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="State">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> State </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.state}} </mat-cell>
                             </ng-container>
 
                             <!-- Color Column -->
@@ -204,17 +222,11 @@
                               <mat-cell *matCellDef="let row"> {{row.unit}} </mat-cell>
                             </ng-container>
 
-                            <!-- Color Column -->
-                            <ng-container matColumnDef="Phone No">
-                              <mat-header-cell *matHeaderCellDef mat-sort-header> Phone No </mat-header-cell>
-                              <mat-cell *matCellDef="let row"> {{row.phone_no}} </mat-cell>
-                            </ng-container>
-
-                            <!-- Color Column -->
-                            <ng-container matColumnDef="State">
-                              <mat-header-cell *matHeaderCellDef mat-sort-header> State </mat-header-cell>
-                              <mat-cell *matCellDef="let row"> {{row.state}} </mat-cell>
-                            </ng-container>
+                            <!-- Name Column -->
+                            <ng-container matColumnDef="Updated On">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Updated On </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.updatedAt | date}} </mat-cell>
+                            </ng-container>                            
 
                             <!-- Color Column -->
 
@@ -225,6 +237,7 @@
                                 <button class="btn btn-secondary" data-toggle="modal" 
                                   [attr.data-target]="'#'+row.uniqueId">View
                                 </button> &nbsp;
+                                <a  class="btn btn-secondary">Edit</a>&nbsp;
                                   <button class="btn badge {{row.approve? 'badge-success':'badge-danger'}}" (click) = "onApprove(row._id)">{{row.approve? 'Approved' : 'Approve'}}</button>
                                 </mat-cell>
                             </ng-container>
@@ -234,7 +247,12 @@
                             </mat-row>
                           </mat-table>
 
-                          <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+                          <mat-paginator [pageSizeOptions]="[20, 50, 100, 200]"></mat-paginator>
+
+                           <!-- Row shown when there is no matching data. -->
+                          <tr class="mat-row" *matNoDataRow>
+                            <td class="mat-cell" colspan="4">No data matching the filter</td>
+                          </tr>
                         </div>
 
                       </div>
