--- a/src/app/agent/agent-profile/agent-profile.component.html
+++ b/src/app/agent/agent-profile/agent-profile.component.html
@@ -2,10 +2,9 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-top justify-content-center">
-            <a class="navbar-brand brand-logo" href="index.html">
-                Card System </a>
-            <a class="navbar-brand brand-logo-mini" href="index.html">
-                Card System </a>
+            <a class="navbar-brand brand-logo" href="#">
+                <img src="assets/images/logo.png" height="80">
+            </a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-center">
             <ul class="navbar-nav ml-auto">
@@ -51,12 +50,20 @@
                     </a>
                 </li>
                 <li class="nav-item nav-category">Main Menu</li>
+
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/agent">
                         <i class="menu-icon typcn typcn-document-text"></i>
                         <span class="menu-title">Dashboard</span>
                     </a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/agent/capture">
+                      <i class="menu-icon typcn typcn-th-large-outline"></i>
+                      <span class="menu-title">User Registration</span>
+                    </a>
+                  </li>
 
                 <li class="nav-item">
                     <a class="nav-link active" routerLink="/agent/profile">
