--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 .active{
-	background: #0c09ac !important;
+	background: #000 !important;
 }
 .dataTables_wrapper > .dataTables_paginate > .paginate_button{
-	    color: #1b45ef !important;
+	    color: #212329 !important;
 }
-.paginate_button::hover{
-	background-color: #1b45ef !important;
+.paginate_button:hover{
+	background-color: #212329 !important;
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
