--- a/src/assets/css/demo_1/style.css
+++ b/src/assets/css/demo_1/style.css
@@ -269,7 +269,7 @@
     -webkit-transition: width 0.25s ease, background 0.25s ease;
     -moz-transition: width 0.25s ease, background 0.25s ease;
     -ms-transition: width 0.25s ease, background 0.25s ease;
-    background: #1c45ef;
+    background: #242527;
     width: 270px;
     height: 63px; }
     .navbar.default-layout .navbar-brand-wrapper .navbar-brand {
@@ -403,8 +403,7 @@
 /* Sidebar */
 .sidebar {
   min-height: calc(100vh - 63px);
-  background: -webkit-gradient(linear, left bottom, left top, from(#5768f3), to(#1c45ef));
-  background: linear-gradient(to top, #5768f3, #1c45ef);
+  background: linear-gradient(to top, #242527, #212329);
   font-family: "roboto", sans-serif;
   padding: 0;
   width: 270px;
@@ -449,7 +448,7 @@
           display: block;
           height: 100%;
           width: 2px;
-          background: #1026de; }
+          background: #242527; }
         .sidebar > .nav .nav-item:not(.hover-open) .collapse .sub-menu .nav-item .nav-link:hover,
         .sidebar > .nav .nav-item:not(.hover-open) .collapsing .sub-menu .nav-item .nav-link:hover {
           color: #fff; }
@@ -579,7 +578,7 @@
       transition-property: "background", "color", "box-shadow", "padding", "box-shadow";
       transition-property: "background", "color", "box-shadow", "padding"; }
     .sidebar > .nav:not(.sub-menu) > .nav-item:hover:not(.nav-profile):not(.hover-open) > .nav-link:not([aria-expanded="true"]) {
-      background: #0f25d5;
+      background: #000;
       padding-left: 65px; }
       .sidebar > .nav:not(.sub-menu) > .nav-item:hover:not(.nav-profile):not(.hover-open) > .nav-link:not([aria-expanded="true"]):before {
         border-color: #fff; }
@@ -800,14 +799,14 @@
   color: #212529; }
 
 .average-price-card .card {
-  background: #030aac; }
+  background: #242527 }
 
 .average-price-card h3 {
   margin-bottom: 0; }
 
 .average-price-card .icon-holder {
   border-radius: 5px;
-  border: 1px solid #4e55c5;
+  border: 1px solid #242527;
   width: 40px;
   height: 40px;
   display: -webkit-box;
@@ -819,7 +818,7 @@
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  background: #2944b5;
+  background: #000;
   color: #fff;
   font-size: 20px; }
   .average-price-card .icon-holder i {
