ui changes and additional components

--- a/src/app/admin/admin-profile/admin-profile.component.html
+++ b/src/app/admin/admin-profile/admin-profile.component.html
@@ -14,7 +14,7 @@
               <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
                 <div class="dropdown-header text-center">
                   <img class="img-md rounded-circle" src="../assets/images/faces/face8.jpg" alt="Profile image">
-                  <p class="mb-1 mt-3 font-weight-semibold">Alabidun Mubarak</p>
+                  <p class="mb-1 mt-3 font-weight-semibold"></p>
                   <p class="font-weight-light text-muted mb-0">Admin</p>
                 </div>
                 <a class="dropdown-item" routerLink="admin/profile">My Profile <i class="dropdown-item-icon ti-dashboard"></i></a>
@@ -39,7 +39,7 @@
                   <div class="dot-indicator bg-success"></div>
                 </div>
                 <div class="text-wrapper">
-                  <p class="profile-name">Alabidun Mubarak</p>
+                  <p class="profile-name"></p>
                   <p class="designation">Admin</p>
                 </div>
               </a>
@@ -106,7 +106,7 @@
                               <input formControlName="confirmpassword" type="password" class="form-control"
                                   id="exampleInputConfirmPassword4" placeholder="Confirm Password">
                           </div>
-                          <button type="submit" class="btn btn-success mr-2" [class.spinner]="loading" [disabled]="!adminForm.valid">Save Changes</button>
+                          <button type="submit" class="btn btn-dark mr-2" [class.spinner]="loading" [disabled]="!adminForm.valid">Save Changes</button>
                       </form>
                   </div>
               </div>
