--- a/src/app/agent/capture/capture.component.html
+++ b/src/app/agent/capture/capture.component.html
@@ -346,7 +346,7 @@
                           </div>
                         </div>
                       </div>
-                      <button [disabled]= "!agentForm.valid"  type="submit" class="btn btn-primary">Save Data</button>
+                      <button [disabled]= "!agentForm.valid"  type="submit" class="btn btn-dark">Save Data</button>
                     </form>
                   </div>
                 </div>
