--- a/src/app/admin/add-agent/add-agent.component.html
+++ b/src/app/admin/add-agent/add-agent.component.html
@@ -14,7 +14,7 @@
           <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
             <div class="dropdown-header text-center">
               <img class="img-md rounded-circle" src="../assets/images/faces/face8.jpg" alt="Profile image">
-              <p class="mb-1 mt-3 font-weight-semibold">Alabidun Mubarak</p>
+              <p class="mb-1 mt-3 font-weight-semibold"></p>
               <p class="font-weight-light text-muted mb-0">Admin</p>
             </div>
             <a class="dropdown-item" routerLink="/admin/profile">My Profile <i
@@ -42,7 +42,7 @@
               <div class="dot-indicator bg-success"></div>
             </div>
             <div class="text-wrapper">
-              <p class="profile-name">Alabidun Mubarak</p>
+              <p class="profile-name"></p>
               <p class="designation">Admin</p>
             </div>
           </a>
@@ -119,7 +119,7 @@
                       alt="adminForm.value.title">
                     </div>
                   </div>
-                  <button [disabled]="!adminForm.valid" type="submit" class="btn btn-success mr-2">Add</button>
+                  <button [disabled]="!adminForm.valid" type="submit" class="btn btn-dark mr-2">Add</button>
                 </form>
               </div>
             </div>
