--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -15,7 +15,7 @@
               <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
                 <div class="dropdown-header text-center">
                   <img class="img-md rounded-circle" src="../assets/images/faces/face8.jpg" alt="Profile image">
-                  <p class="mb-1 mt-3 font-weight-semibold">Alabidun Mubarak</p>
+                  <p class="mb-1 mt-3 font-weight-semibold"></p>
                   <p class="font-weight-light text-muted mb-0">Admin</p>
                 </div>
                 <a class="dropdown-item" routerLink="/admin/profile">My Profile <i class="dropdown-item-icon ti-dashboard"></i></a>
@@ -40,7 +40,7 @@
                   <div class="dot-indicator bg-success"></div>
                 </div>
                 <div class="text-wrapper">
-                  <p class="profile-name">Alabidun Mubarak</p>
+                  <p class="profile-name"></p>
                   <p class="designation">Admin</p>
                 </div>
               </a>
@@ -237,7 +237,7 @@
                                 <button class="btn btn-secondary" data-toggle="modal" 
                                   [attr.data-target]="'#'+row.uniqueId">View
                                 </button> &nbsp;
-                                <a  class="btn btn-secondary">Edit</a>&nbsp;
+                                <a  class="btn btn-secondary" [routerLink]="['/admin/edit-user']" [state]=row>Edit</a>&nbsp;
                                   <button class="btn badge {{row.approve? 'badge-success':'badge-danger'}}" (click) = "onApprove(row._id)">{{row.approve? 'Approved' : 'Approve'}}</button>
                                 </mat-cell>
                             </ng-container>
