--- a/src/app/agent/agent-profile/agent-profile.component.html
+++ b/src/app/agent/agent-profile/agent-profile.component.html
@@ -112,7 +112,7 @@
                                         <input formControlName="confirmpassword" type="password" class="form-control"
                                             id="exampleInputConfirmPassword4" placeholder="Confirm Password">
                                     </div>
-                                    <button type="submit" class="btn btn-success mr-2" [class.spinner]="loading"
+                                    <button type="submit" class="btn btn-dark mr-2" [class.spinner]="loading"
                                         [disabled]="loading">Save Changes</button>
                                 </form>
                             </div>
