--- a/src/app/auth/admin/login/login.component.html
+++ b/src/app/auth/admin/login/login.component.html
@@ -38,7 +38,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <button [disabled]="!credentialsForm.valid" class="btn btn-primary submit-btn btn-block" [class.spinner]="loading" [disabled]="loading" type="submit">{{ title }}</button>
+                <button [disabled]="!credentialsForm.valid" class="btn btn-dark submit-btn btn-block" [class.spinner]="loading" [disabled]="loading" type="submit">{{ title }}</button>
               </div>
               <div class="form-group d-flex justify-content-between">
                 <div class="form-check form-check-flat mt-0">
