--- a/src/app/auth/login/reset-password/reset-password.component.html
+++ b/src/app/auth/login/reset-password/reset-password.component.html
@@ -38,7 +38,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <button [disabled]="!credentialsForm.valid" class="btn btn-primary submit-btn btn-block"
+                                <button [disabled]="!credentialsForm.valid" class="btn btn-dark submit-btn btn-block"
                                     [class.spinner]="loading"  type="submit">{{ title }}</button>
                             </div>
                         </form>
