small changes with edit

--- a/src/app/admin/edit-user/edit-user.component.html
+++ b/src/app/admin/edit-user/edit-user.component.html
@@ -326,7 +326,7 @@
                               </div>
                             </div>
                           </div>
-                          <button [disabled]= "!agentForm.valid"  type="submit" class="btn btn-dark">Update Data</button> &nbsp;&nbsp;
+                          <button  type="submit" class="btn btn-dark">Update Data</button> &nbsp;&nbsp;
                           <a class="btn btn-primary" routerLink="/admin/dashboard">Cancel</a>
                         </form>
                       </div>
